<resources>

    <string name="app_name">惠车宝</string>
    <string name="head_address">北京市石景山区八大处高科技园区西井路3-3-5947</string>
    <string name="branch_address">宜昌市东山开发区珠海路8号412室</string>
    <string name="postcode">4330000</string>
    <string name="phone">0717-6300407</string>
    <string name="fax">0717-6300407</string>
    <string name="website">www.chinahcb.net</string>
    <string name="choicemonth">选择月份</string>
    <string name="choiceyear">选择年份</string>
    <string name="choicevehicletype">选择车辆类型</string>
    <string name="choicebuycardtype">选中充值类型</string>
    <string name="choicecity">选择地区</string>
    <string name="chaxun"> 查询</string>
    <string name="date">日期</string>
    <string name="homepage">http://www.huichebo.com</string>
    <!-- temp path -->
    <string name="TEMP_PATH">/calltaxi/temp</string>
    <string name="inputName">请输入手机号码</string>
    <string name="inputPassWord">请输入密码</string>
    <string name="inputOldPassWord">请输入旧密码</string>
    <string name="inputNewPassWord">请输入新密码</string>
    <string name="inputReNewPassWord">请重复新密码</string>
    <string name="inputVerifyCode">请输入验证码</string>
    <string name="login">登录</string>
    <string name="submit">提交</string>
    <string name="ImageDescription">图片描述</string>

    <string-array name="Criteria">
        <item>距离最近</item>
        <item>价格最低</item>
        <item>推荐网点</item>
        <item>评分最高</item>
    </string-array>

    <string name="aboutUs">\u3000\u3000惠车宝是幸福车生活增值服务平台，专注于汽车服务。惠车宝以“车行天下、幸福人生”为企业理念，以为客户提供全方位的增值服务为核心，以合作共赢为前提，通过互联网技术、资本运营对汽车后市场消费进行产业整合。 \n\u3000\u3000惠车宝的存在，是致力于实现包括企业、员工、客户以及广泛意义上社会关联群体大同境界上的幸福平台和工具，它包含了所有要素上的自然追求物质世界和精神世界的两个方面。惠车宝人正是以为广大车主创造幸福的人车生活为己任，并视之为企业的使命，通过高效全面的整合汽车后市场服务，为车主提供一站式放心和高满意度的全方位服务，增强广大车主精神世界的幸福感，同时，也为广大车主在享受服务的过程中创造经济价值。</string>
    <string name="cardActive">a)通过官方网站激活，地址：http://www.huichebo.com，输入密钥、手机号、验证码即可激活，首次激活自动注册为惠车宝会员，请登录后及时修改密码。\nb)通过APP激活，输入密钥、手机号、验证码即可激活，首次激活自动注册为惠车宝会员，请登录后及时修改密码。</string>
    <string name="huibiUsage">a)1.注册会员，通过官方网站注册，地址：http://www.huichebo.com，免费成为会员。\n2.消费卡第一次激活，免费成为会员。\nb)1.通过官方网站http://www.huichebo.com/map.php，查询服务网点。\n2.通过手机客户端，查询服务网点。\nc)1.网点消费，消费验证，消费送积分。\nd)1.通过官方网站评价，地址：http://www.huichebo.com，评价送积分。\n2.通过手机客户端评价，评价送积分。</string>
    <string name="bankCard">a)1.注册会员，通过官方网站注册，地址：http://www.huichebo.com，免费成为会员。\n2.消费卡第一次激活，免费成为会员。\nb)1.通过官方网站http://www.huichebo.com/map.php，查询服务网点。\n2.通过手机客户端，查询服务网点。\nc)1.网点消费，消费验证，支持信用卡，储蓄卡，均享受惠车宝会员价，消费送积分。\nd)1.通过官方网站评价，地址：http://www.huichebo.com，评价送积分。\n2.通过手机客户端评价，评价送积分。</string>
    <string name="privilege">1.尊享会员特惠折扣/会员活动/积分兑奖/会员增值服务等专享权利。\n2.会员可在惠车宝平台的任意网点（加盟店）享受会员特惠折扣。\n3.各类汽车服务，都可凭会员享受折扣与超值服务。\n4.400客服服务热线，为您解决任何服务问题及投诉。</string>

</resources>