<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/top_title_bar"/>
    <LinearLayout
        android:id="@+id/loginview_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/nomal_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="35dp" >

        <LinearLayout
            style="@style/login_regist_editlayout"
            android:layout_marginTop="30dp" >

            <EditText
                android:id="@+id/changePw_oldPw"
                style="@style/login_regist_editview"
                android:hint="@string/inputOldPassWord"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            style="@style/login_regist_editlayout"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/changePw_newPwd"
                style="@style/login_regist_editview"
                android:hint="@string/inputNewPassWord"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            style="@style/login_regist_editlayout"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/changePw_newPwd_Re"
                style="@style/login_regist_editview"
                android:hint="@string/inputReNewPassWord"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/changePw_button"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>